{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "BattleCamera",
            "id": "a736fc36-e2a7-475e-941f-54ac79a230fe",
            "actions": [
                {
                    "name": "Orbit",
                    "type": "Button",
                    "id": "f54f9eff-6fb9-4f4e-b129-d45b659be2f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseInput",
                    "type": "Value",
                    "id": "38a8ad03-1a73-4f94-b29a-a8394f5a037d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "579f5d86-5433-41c4-ae32-9513584e5ff6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "ccbce9a7-9374-47bc-b376-90e3d4e2c970",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "290c8ba6-37ec-4a9d-af32-026732fbb0e5",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Orbit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca76d551-f8c2-48f8-a686-8108e7a837b9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false)",
                    "groups": "",
                    "action": "MouseInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "faf0b266-2e2f-492b-be5b-0031abcf5176",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "9c4f97dc-311d-4e7d-b44d-7eeedc141039",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9cfd4fa5-e8ef-4a14-a85b-0f68fc692370",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fc390193-9d22-4f5c-aa95-ddd92e8000d0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5737f430-9d4d-4f39-9a86-170bf4d471c0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7a9a619e-673b-4c62-bbd9-c9f909bbe59c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UnitControls",
            "id": "a6eecf73-6130-4577-b1a6-f8b94a7c8ef6",
            "actions": [
                {
                    "name": "Selection",
                    "type": "Button",
                    "id": "4fdfebf6-e2dd-4418-8c69-b0a670a02fa5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartAction",
                    "type": "Button",
                    "id": "4ba80f03-fd6c-477a-bfee-3f74846a4999",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "60f5780e-74a0-48a4-ba82-7ac74b9bf1b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3f714b3-cda9-45f6-9e45-86cc3fadbb6f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "708cb1b7-0102-45e1-a05a-d1b46206dfdd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b9d0cc6-147c-44f1-915f-27f0e9bb4dca",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}